// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Detail/OrderBasicInfo render snap when order is normal 1`] = `
<body>
  <div>
    <div
      class="order-steps-basic-info"
    >
      <div
        class="order-steps-basic-info-title"
      >
        基本信息
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          创建人
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
              style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
            >
              <span
                class="ant-avatar-string"
                style="line-height: 20px; transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          创建时间
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.5C4.85775 16.5 1.5 13.1423 1.5 9C1.5 4.85775 4.85775 1.5 9 1.5C13.1423 1.5 16.5 4.85775 16.5 9C16.5 13.1423 13.1423 16.5 9 16.5ZM9 15C10.5913 15 12.1174 14.3679 13.2426 13.2426C14.3679 12.1174 15 10.5913 15 9C15 7.4087 14.3679 5.88258 13.2426 4.75736C12.1174 3.63214 10.5913 3 9 3C7.4087 3 5.88258 3.63214 4.75736 4.75736C3.63214 5.88258 3 7.4087 3 9C3 10.5913 3.63214 12.1174 4.75736 13.2426C5.88258 14.3679 7.4087 15 9 15ZM9.75 9H12.75V10.5H8.25V5.25H9.75V9Z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              2024-01-05T11:00:33Z
            </span>
          </div>
        </div>
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          工单状态
        </div>
        <div
          class="order-steps-basic-info-item-value"
        >
          <div
            class="css-3q8fl"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                  stroke="#6094FC"
                  stroke-width="1.5"
                />
                <path
                  clip-rule="evenodd"
                  d="M7.99995 3.15466V7.99996L3.79321 10.4038C3.87976 10.5615 4.00868 10.6956 4.16982 10.7886L7.49995 12.7113C7.80935 12.8899 8.19055 12.8899 8.49995 12.7113L11.8301 10.7886C12.1395 10.61 12.3301 10.2799 12.3301 9.92261V6.07731C12.3301 5.72005 12.1395 5.38992 11.8301 5.21129L8.49995 3.28864C8.34525 3.19932 8.1726 3.15466 7.99995 3.15466Z"
                  fill="#6094FC"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span>
              正在上线
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Detail/OrderBasicInfo render snap when order is undefined 1`] = `
<body>
  <div>
    <div
      class="order-steps-basic-info"
    >
      <div
        class="order-steps-basic-info-title"
      >
        基本信息
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          创建人
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
              style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
            >
              <span
                class="ant-avatar-string"
                style="line-height: 20px; transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          创建时间
        </div>
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="custom-icon css-u3jcp4"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.5C4.85775 16.5 1.5 13.1423 1.5 9C1.5 4.85775 4.85775 1.5 9 1.5C13.1423 1.5 16.5 4.85775 16.5 9C16.5 13.1423 13.1423 16.5 9 16.5ZM9 15C10.5913 15 12.1174 14.3679 13.2426 13.2426C14.3679 12.1174 15 10.5913 15 9C15 7.4087 14.3679 5.88258 13.2426 4.75736C12.1174 3.63214 10.5913 3 9 3C7.4087 3 5.88258 3.63214 4.75736 4.75736C3.63214 5.88258 3 7.4087 3 9C3 10.5913 3.63214 12.1174 4.75736 13.2426C5.88258 14.3679 7.4087 15 9 15ZM9.75 9H12.75V10.5H8.25V5.25H9.75V9Z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              2024-01-05T11:00:33Z
            </span>
          </div>
        </div>
      </div>
      <div
        class="order-steps-basic-info-item"
      >
        <div
          class="order-steps-basic-info-item-label"
        >
          工单状态
        </div>
        <div
          class="order-steps-basic-info-item-value"
        >
          -
        </div>
      </div>
    </div>
  </div>
</body>
`;
